Fix Ferrari's logo path problem

--- a/project_4_questionnaire.html
+++ b/project_4_questionnaire.html
@@ -43,7 +43,7 @@
     <header>
       <picture>
         <img class="questionnaire__logo"
-             src="../images/ferrari_logo.png"
+             src="images/ferrari_logo.png"
              alt="Ferrari's logo">
       </picture>
       <h2 class="questionnaire__header">
