Add input's name

--- a/project_4_search.html
+++ b/project_4_search.html
@@ -42,7 +42,7 @@
 
   <form class="search">
     <label class="search__label" for="searchTxt">Search</label>
-      <input class="search__input" id="searchTxt" type="text">
+      <input class="search__input" id="searchTxt" name="searchTxt" type="text">
       <select class="search__select" name="category">
         <option value="">Select</option>
         <option value="1">Category one</option>
