Add select's name

--- a/project_4_search.html
+++ b/project_4_search.html
@@ -43,7 +43,7 @@
   <form class="search">
     <label class="search__label" for="searchTxt">Search</label>
       <input class="search__input" id="searchTxt" name="searchTxt" type="text">
-      <select class="search__select" name="category">
+      <select class="search__select" id="category" name="category">
         <option value="">Select</option>
         <option value="1">Category one</option>
         <option value="2">Category two</option>
