Add the validator.js script

--- a/project_4_search.html
+++ b/project_4_search.html
@@ -55,6 +55,7 @@
       <input class="search__submit" type="submit" value="Search">
   </form>
 
+  <script src="js/validator.js"></script>
 
 </body>
 </html>
