--- a/project_4_shipping.html
+++ b/project_4_shipping.html
@@ -51,7 +51,7 @@
         </picture>
         <h2 class="shipping__header--title">Billing Address</h2>
       </header>
-      <form class="shipping__form">
+      <form class="shipping__form" id="shippingForm" name="shippingForm">
         <label class="shipping__label" for="B_firstName">First Name</label>
         <input class="shipping__input"
                type="text"
@@ -132,6 +132,164 @@
   </article>
 
   <script src="js/validator.js"></script>
+  <script>
+      var valid = Validators;
+      var doc   = document;
+      var form  = doc.getElementById('shippingForm');
+      var same  = doc.getElementById('use_B_address');
 
+
+      var inputs = {
+        S_firstName: valid.getNode(doc.getElementById('S_firstName'), 'firstName'),
+        S_lastName:  valid.getNode(doc.getElementById('S_lastName'), 'lastName'),
+        S_address:   valid.getNode(doc.getElementById('S_address')),
+        S_city:      valid.getNode(doc.getElementById('S_city')),
+        S_country:   valid.getNode(doc.getElementById('S_country'))
+      }
+
+      /*
+       * For each input, defines a particular Validator function that must 
+       * be satisfied to proceed further. 
+       */
+
+      inputs.S_firstName.setValidator(function(){
+
+        var node = this.node;
+
+        if (valid.isEmpty(node.value) && !valid.isLength(node.value, 2)) {
+              node.setCustomValidity(this.constrValue);
+        } else {
+              this.resetCustomValidity();
+        }
+
+      });
+
+      inputs.S_lastName.setValidator(function(){
+
+        var node = this.node;
+
+        if (valid.isEmpty(node.value) && !valid.isLength(node.value, 2)) {
+              node.setCustomValidity(this.constrValue);
+        } else {
+              this.resetCustomValidity();
+        }
+
+      });
+      inputs.S_address.setConstraint('Please specify a valid Shipping Address');
+      inputs.S_address.setValidator(function(){
+
+          var node = this.node;
+
+          try {
+            if (valid.isEmpty(node.value)) {
+                node.setCustomValidity(this.constrValue);
+            } else if (!valid.moreWordsThan(node.value, 2)) {
+                node.setCustomValidity('A valid address is composed at least ' +
+                                       'two words');
+            } else {
+                this.resetCustomValidity();
+            }
+          } catch (err) {}
+
+      });
+
+      inputs.S_city.setValidator(function(){
+
+          var node = this.node;
+
+          try { 
+
+            if (valid.isEmpty(node.value)) {
+                node.setCustomValidity(this.constrValue);
+            } else if (valid.isLength(node.value, 2)) {
+                node.setCustomValidity('The minimum length of this field is 3');
+            } else {
+                this.resetCustomValidity();
+            }
+          } catch (err) {
+                node.setCustomValidity(this.constrValue);
+          }
+
+      });
+
+      inputs.S_country.setValidator(function(){
+
+          var node = this.node;
+
+          try {
+            if (valid.isEmpty(node.value)) {
+                node.setCustomValidity(this.constrValue);
+            } else if (valid.isLength(node.value, 2)) {
+                node.setCustomValidity('The minimum length of this field is 3');
+            } else {
+                this.resetCustomValidity();
+            }
+          } catch (err) {
+                node.setCustomValidity(this.constrValue);
+          }
+
+      });
+
+
+      /* Sets an initial custom validity for every input 
+       * All the indicated inputs are not valid by default
+       */
+
+      for (var input in inputs) {
+        if (inputs.hasOwnProperty(input)) {
+          inputs[input].node.setCustomValidity(inputs[input].constr.constrValue);
+          // Defines custom event listeners
+          inputs[input].node.addEventListener('change', function (event) {
+
+            var constr  = inputs[this.getAttribute('id')].constr;
+            var billInp = this.getAttribute('id').replace(/S/,'B');
+            constr.setInvalidClass();
+            constr.check();
+            // every time the checkbox is checked, it copies the value of
+            // the current 'billing' input into the corresponding shipping input
+            if (same.checked) {
+              doc.getElementById(billInp).value = constr.node.value;
+            }
+
+          });
+        }
+      }
+
+      // Copies the billing info into the corresponding shipping inputs
+      same.addEventListener('change', function (event) {
+
+        var _self = this;
+
+          // Sets the change event for all the radio buttons
+          var newObject = Object.keys(inputs).map(function(elem) {
+
+              var billInp = elem.replace(/S/,'B');
+
+              if (_self.checked && !valid.isEmpty(inputs[elem].node.value)) {
+                  doc.getElementById(billInp).value = inputs[elem].node.value;
+              } else {
+                  doc.getElementById(billInp).value = '';
+              }
+          });
+
+          if (this.checked) {
+
+          }
+      });
+
+      form.addEventListener('submit', function (event) {
+
+      // Check the inputs validity. If at least one input is invalid, stop
+      // the form
+      for (var input in inputs) {
+          if (inputs.hasOwnProperty(input)) {
+              if (!inputs[input].node.validity.valid) {
+                  event.preventDefault();
+              }
+          }
+      }
+
+      }, false);
+  </script>
 </body>
 </html>
