Add the modifier shipping__label--required

--- a/project_4_shipping.html
+++ b/project_4_shipping.html
@@ -99,27 +99,42 @@
                id="use_B_address"
                name="use_B_address" value="1">
       </div>
-        <label class="shipping__label" for="S_firstName">First Name</label>
+        <label class="shipping__label shipping__label--required" 
+               for="S_firstName">
+          First Name
+        </label>
         <input class="shipping__input"
                type="text"
                id="S_firstName"
                name="S_firstName">
-        <label class="shipping__label" for="S_lastName">Last Name</label>
+        <label class="shipping__label shipping__label--required" 
+               for="S_lastName">
+          Last Name
+        </label>
         <input class="shipping__input"
                type="text"
                id="S_lastName"
                name="S_lastName">
-        <label class="shipping__label" for="S_address">Address</label>
+        <label class="shipping__label shipping__label--required" 
+               for="S_address">
+          Address
+        </label>
         <input class="shipping__input"
                type="text"
                id="S_address"
                name="S_address">
-        <label class="shipping__label" for="S_city">City</label>
+        <label class="shipping__label shipping__label--required" 
+               for="S_city">
+          City
+        </label>
         <input class="shipping__input"
                type="text"
                id="S_city"
                name="S_city">
-        <label class="shipping__label" for="S_country">Country</label>
+        <label class="shipping__label shipping__label--required" 
+               for="S_country">
+          Country
+        </label>
         <input class="shipping__input"
                type="text"
                id="S_country"
