Change 'Use Billing Address' to 'Use the following information for Billing'

--- a/project_4_shipping.html
+++ b/project_4_shipping.html
@@ -91,7 +91,7 @@
         <label class="shipping__label
                       shipping__label--use-billing"
                 for="use_B_address">
-          Use Billing Address
+          Use the following information for Billing
         </label>
         <input class="shipping__input
                       shipping__input--billing-checkbox"
