Fix evtName.setConstraint text

--- a/project_4_scheduling.html
+++ b/project_4_scheduling.html
@@ -136,8 +136,8 @@
        * be satisfied to proceed further. 
        */
 
-      inputs.evtName.setConstraint('The Event Name must be a nonempty string ' +
-                                   ' of at least of 4 characters');
+      inputs.evtName.setConstraint('The Event Name must be a non-empty ' +
+                                   'string of at least four characters');
       inputs.evtName.setValidator(function(elem){
 
           var value = elem.node.value;
